# espresso

./: .gitignore  CMakeLists.txt  README.md  espressoConfig.cmake  libespressoVC19.vcxproj  libespressoVC19.vcxproj.filters
docs/: Blog-Construction.md  Blog-Manager-Object.md  Blog.md  Developer-Guide.md  README.md
espresso-lib/: README.md
espresso-lib/docs/: Blog.md  Developer-Guide.md
espresso-lib/include/: espresso.hxx
espresso-lib/include/espresso/: Arg.hxx  Arg.inl  ArgManager.hxx  ArgManagerFactory.hxx  ArgMgr.hxx  ArgMgrCLI.hxx  Args.hxx  IArgMgr.hxx  StopWatch.hxx  strings.hxx  sys.hxx  threads.hxx
espresso-lib/src/: Arg.cxx  ArgManager.cxx  ArgManagerFactory.cxx  ArgMgr.cxx  ArgMgrCLI.cxx  Args.cxx  IArgMgr.cxx  StdoutArgRenderer.cxx  StopWatch.cxx  espresso.cxx  libespressoVC14.sln  libespressoVC14.vcxproj  libespressoVC17.sln  libespressoVC17.vcxproj  libespressoVC19.sln  libespressoVC19.vcxproj  libespressoVC6.dsp  libespressoVC6.dsw  libespressoVC7.sln  libespressoVC7.vcproj  libespressoVC8.sln  libespressoVC8.vcproj  libespressoVC9.sln  libespressoVC9.vcproj  makefile  stdhdr.cxx  stdhdr.hxx  strings.cxx  sys.cxx  threads.cxx
espresso-tools/: README.md  espresso-tools.dsw  espresso-toolsVC14.sln  espresso-toolsVC17.sln  makefile
espresso-tools/bin2txt/: Main.cxx  bin2txt.dsp  bin2txt.dsw  bin2txtVC14.vcxproj  bin2txtVC17.vcxproj  makefile
espresso-tools/dec2hex/: Main.cxx  dec2hex.dsp  dec2hex.dsw  dec2hexVC14.vcxproj  dec2hexVC17.vcxproj
espresso-tools/env/: Main.cxx  env.dsp  env.dsw  envVC14.vcxproj  envVC17.vcxproj  makefile
espresso-tools/memcheck/: Main.cxx  makefile  memcheck.dsp  memcheck.dsw  memcheckVC14.vcxproj  memcheckVC17.vcxproj
espresso-tools/secs2time/: Main.cxx  makefile  secs2time.dsp  secs2time.dsw  secs2timeVC14.vcxproj  secs2timeVC17.vcxproj
espresso-tools/spaces2tabs/: Main.cxx  makefile  spaces2tabs.dsp  spaces2tabsVC14.vcxproj  spaces2tabsVC17.vcxproj
espresso-tools/tabs2spaces/: Main.cxx  makefile  tabs2spacesVC14.vcxproj  tabs2spacesVC17.vcxproj
include/: espresso.hxx
include/espresso/: Arg.hxx  Arg.inl  ArgManager.hxx  ArgManagerFactory.hxx  Args.hxx  IArgMgr.hxx  IArgRenderer.hxx  StdoutArgRenderer.hxx  StopWatch.hxx  strings.hxx  sys.hxx  threads.hxx  time.hxx
src/: Arg.cxx  ArgManager.cxx  ArgManagerFactory.cxx  Args.cxx  IArgMgr.cxx  IArgRenderer.cxx  StdoutArgRenderer.cxx  StopWatch.cxx  espresso.cxx  libespressoVC19.vcxproj  makefile  stdhdr.cxx  stdhdr.hxx  strings.cxx  sys.cxx  threads.cxx  time.cxx
tests/: TestArgs.cxx
